variables.Variables.scala.error
Erreur de compilation :
Variables:5: error: not found: value nBPas
  nBPas = nbPas + 1
  ^Variables:7: error: not found: value */
*/ on met les buggle sur biscuit*/
^Variables:7: error: not found: value met
*/ on met les buggle sur biscuit*/
      ^Variables:7: error: not found: value buggle
*/ on met les buggle sur biscuit*/
              ^Variables:7: error: not found: value biscuit
*/ on met les buggle sur biscuit*/
                         ^